add front end api call and search page UI

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,3 +62,7 @@ body {
   }
 }
 /* ################################## */
+
+/* body {
+  background: linear-gradient(darkgrey, white, white, darkgrey);
+} */
