--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@
 
 /* ################################## */
 /* Animated background */
-html, body {
+/* html, body {
   width: 100%;
   height: 100%;
 }
@@ -60,7 +60,7 @@ body {
   100% {
     background-position: 0% 50%;
   }
-}
+} */
 /* ################################## */
 
 /* body {
