--- a/client/src/App.css
+++ b/client/src/App.css
@@ -66,3 +66,7 @@ body {
 /* body {
   background: linear-gradient(darkgrey, white, white, darkgrey);
 } */
+
+.challengeBook {
+  border-bottom: #282c34;
+}
