--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -1,11 +1,11 @@
 /* ################################## */
 /* Animated background */
-/* .nav {
+/* .loginBody {
     width: 100%;
-    height: 100%;
+    height: 100% !important;
 }
 
-.nav {
+.loginBody {
     background: linear-gradient(-45deg, #ee52a0, #e73c7e, #9652ee, #23a6d5, #23d5ab, #23d541);
     background-size: 400% 600%;
     animation: gradient 15s ease infinite;
