dynamic background added

--- a/client/src/components/mychallenges/mychallenges.css
+++ b/client/src/components/mychallenges/mychallenges.css
@@ -1,6 +1,6 @@
-/* #userChCont {
+#userChCont {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 #userChCont {
@@ -19,4 +19,4 @@
     100% {
     background-position: 0% 50%;
     }
-} */
+}
