added border bottom to challenge list

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,7 +67,7 @@ body {
   background: linear-gradient(darkgrey, white, white, darkgrey);
 } */
 
-.challengeBook {
+/* .challengeBook {
   border-bottom: #282c34;
-}
+} */
 
