added grey gradient background to site

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,11 +63,16 @@ body {
 } */
 /* ################################## */
 
-/* body {
+body {
   background: linear-gradient(darkgrey, white, white, darkgrey);
-} */
+}
 
 /* .challengeBook {
   border-bottom: #282c34;
 } */
 
+
+/* Application Background */
+/* body {
+  background: blue;
+} */
