--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,9 +38,10 @@
 }
 
 body {
-  background: url(https://images.pexels.com/photos/2748756/pexels-photo-2748756.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  /* background: url(https://images.pexels.com/photos/2748756/pexels-photo-2748756.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
+  background-color: #f6f6f6;
 }
 
 .appTitle {
