--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,15 +46,16 @@ body {
 
 .appTitle {
   margin-top: 15%;
-  margin-left: 15%;
+  margin-bottom: 10px;
+  text-align: center;
   font-weight: bold;
   font-size: 70px;
   color: black;
 }
 
 #getStarted {
-  margin-left: 16%;
-  margin-right: 12%;
+  margin-bottom: 40px;
   font-size: 23px;
   font-weight: bold;
+  text-align: center;
 }
